--- a/Apps/SAP/ConsultaFBL5N.xaml
+++ b/Apps/SAP/ConsultaFBL5N.xaml
@@ -5,7 +5,7 @@
     <x:Property Name="in_DtbSP" Type="InArgument(sd:DataTable)" />
     <x:Property Name="in_BooPrimeraValidacion" Type="InArgument(x:Boolean)" />
   </x:Members>
-  <sap:VirtualizedContainerService.HintSize>1402,8890</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1491,8810</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="62">
@@ -83,6 +83,8 @@
       <AssemblyReference>UiPath.UIAutomationNext</AssemblyReference>
       <AssemblyReference>UiPath.Studio.Constants</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
+      <AssemblyReference>System.Data.Entity</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="ConsultaFBL5N" sap:VirtualizedContainerService.HintSize="1412,8745" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -154,6 +156,14 @@
                 <InArgument x:TypeArguments="x:String">[in_Config("ColDocuSAP").ToString]</InArgument>
               </ui:FilterOperationArgument.Column>
             </ui:FilterOperationArgument>
+            <ui:FilterOperationArgument BooleanOperator="Or" Operator="EQ">
+              <ui:FilterOperationArgument.Column>
+                <InArgument x:TypeArguments="x:String">[in_Config("ColDocuSAP").ToString]</InArgument>
+              </ui:FilterOperationArgument.Column>
+              <ui:FilterOperationArgument.Operand>
+                <InArgument x:TypeArguments="x:String">["No se encontró documento en tx FBL5N, revisar"]</InArgument>
+              </ui:FilterOperationArgument.Operand>
+            </ui:FilterOperationArgument>
           </scg:List>
         </ui:FilterDataTable.Filters>
         <ui:FilterDataTable.SelectColumns>
@@ -162,7 +172,7 @@
           </scg:List>
         </ui:FilterDataTable.SelectColumns>
       </ui:FilterDataTable>
-      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="975,92" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="Info" Message="[&quot;[ConsultaFBL5N] Cantidad filas filtrando Doc de sap vacio. &quot;+in_DtbSP.Rows.Count.ToString]" />
+      <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="975,92" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="Info" Message="[&quot;[ConsultaFBL5N] Cantidad filas filtrando Doc de sap vacio o que no se pudo encontrar su documento de SAP. &quot;+in_DtbSP.Rows.Count.ToString]" />
       <ui:FilterDataTable DataTable="[in_DtbSP]" DisplayName="Filter DT - Columna Codigo" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="975,161" sap2010:WorkflowViewState.IdRef="FilterDataTable_3" OutputDataTable="[in_DtbSP]" SelectColumnsMode="Keep">
         <ui:FilterDataTable.Filters>
           <scg:List x:TypeArguments="ui:FilterOperationArgument" Capacity="4">
